@@ -78,6 +78,7 @@ suite("runtime/host update cli", () => {
     assertEq(install.status, 0, `expected install exit 0\n${install.stderr}`);
     const operatorPath = path.join(outDir, "operator_receipt.json");
     assert(fs.existsSync(operatorPath), "expected operator_receipt.json");
+    assert(!fs.existsSync(`${operatorPath}.stage`), "operator receipt stage file must not remain after finalize");
     const operator = JSON.parse(fs.readFileSync(operatorPath, "utf8"));
     const opIssues = validateOperatorReceiptV0(operator, "operatorReceipt");
     assertEq(opIssues.length, 0, "expected operator receipt to validate");
