@@ -140,6 +140,10 @@ Any correction, hardening pass, or follow-up change is recorded in a newer chang
 - Added host runtime test assertions that no host receipt `.stage` files remain after finalize.
 - Shared README receipt writer now uses staged atomic finalize (`weftend/README.txt.stage` -> `weftend/README.txt`).
 - Added runtime coverage for deterministic README build/write and no leftover README `.stage` residue.
+- Shared operator receipt writer now uses staged atomic finalize (`operator_receipt.json.stage` -> `operator_receipt.json`).
+- Host runner receipt output now uses staged atomic finalize (`host_run_receipt.json.stage` -> `host_run_receipt.json`).
+- Added runtime coverage for deterministic operator receipt build/write and no leftover operator receipt `.stage` residue.
+- Added host CLI smoke assertions that host/operator receipt `.stage` files do not remain after finalize.
 
 ### Adapter maintenance controls
 - Added `weftend adapter doctor` for deterministic adapter readiness/maintenance reporting.
